# mc-modder-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  NOTES.md  README.md  docker-compose.yaml  mcp-config.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.workspace.yml  postCreateCommands.sh
modder_mc_service/: debug.py  main.py
modder_mc_service/agent/: block.py  block_orchestrator.py  create.py  generate.py  generate_from_diff.py  nodes.py
modder_mc_service/agent/diffs/: block_basic.txt
modder_mc_service/agent/instructions/: basic_block.md  capabilities.md
modder_mc_service/agent/instructions/block_basic/: 1.md  2.md  3.md  4.md  5.md  6.md
modder_mc_service/agent/instructions/block_sounds/: 1.md  2.md  3.md
modder_mc_service/api/: api.py
modder_mc_service/llms/: agents.py  tools_calling_invoke.py
modder_mc_service/mcp/: client.py
modder_mc_service/tools/: files.py
modder_mc_service/util/: llm_init.py  logging.py
tests/agent/: data_capability_test.py  test_capability_diff_executor.py  test_capability_executor.py  test_capability_step_executor.py  test_functions.py
