[tool.poetry]
name = "modder-mc-service"
version = "0.0.1"
description = "A Service to generate Minecraft Mods"
authors = ["Philipp Schlesinger"]


[tool.poetry.dependencies]
python = ">=3.11,<4.0"
langchain = "1.0.0"
langgraph = "1.0.0"
langsmith = "*"
langchain-google-genai = "*" 
langchain-mcp-adapters = "*"
fastapi = "0.115.12"
uvicorn = "0.34.3"


[tool.poetry.group.dev.dependencies]
black="*"
pylint = "*"
pylint-quotes = "*"
pre-commit = "*"
pytest = "*"
nbformat = "*"
ipykernel = "*"
mock = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
serve = "modder_mc_service.main:serve"
